Update responsive tab components

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html {
+body {
   font-family: 'Lato', sans-serif;
   font-size: 100%;
 }
@@ -8,61 +8,154 @@ html {
 }
 
 .tabComponent {
-  width: 80%;
+  width: 800px;
   min-height: 150px;
   border: 1px solid lightgray;
-  padding: 15px;
 }
 
-div.tabComponent input {
+.tabComponent input {
   display: none;
 }
 
-div.tabComponent label {
-  display: inline-block;
-  float: left;
-  cursor: pointer;
-  width: 25%;
-  padding: 20px 10px;
-  text-align: center;
-  border-bottom: 2px solid transparent;
+.tabs {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 0;
   font-weight: bold;
   color: rgba(0,0,0,0.45);
-  text-transform: uppercase;
-
-  -webkit-transition: all 0.5s ease-out;
-  -moz-transition: all 0.5s ease-out;
-  -o-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
-
-  /*transition-timing-function: ease-out;*/
-  /*-webkit-transition-timing-function: ease-out;*/
 }
 
-div.tabComponent label:hover {
+.tabs-lg-screen {
+  padding: 0 15px;
+  justify-content: space-between;
+}
+
+.tabs-sm-screen {
+  display: none;
+}
+
+.tabs label {
+  padding: 20px 0;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
+  cursor: pointer;
+
+  -webkit-transition: color 0.5s, border-bottom-color 0.5s;
+  -moz-transition: color 0.5s, border-bottom-color 0.5s;
+  -o-transition: color 0.5s, border-bottom-color 0.5s;
+  transition: color 0.5s, border-bottom-color 0.5s;
+
+  -webkit-transition-timing-function: ease-out;
+  -moz-transition-timing-function: ease-out;
+  -o-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+
+.tabs label:hover {
   color: rgba(38,198,218,0.6);
   border-bottom-color: rgba(38,198,218,0.5);
 }
 
+.tabs-lg-screen label {
+  border-bottom: 2px solid transparent;
+  flex: 1;
+}
+
+
 .tab-content {
-  clear: left;
+  margin: 0 15px 15px;
   padding: 20px;
   display: none;
-  width: 100%;
-  min-height: 100px;
+  max-height: 200px;
   color: rgba(0,0,0,0.7);
   background-color: rgba(38,198,218,0.2);
 }
 
-div.tabComponent input:checked + label {
+.tabComponent input:nth-of-type(1):checked ~ .tabs-lg-screen label:nth-of-type(1),
+.tabComponent input:nth-of-type(2):checked ~ .tabs-lg-screen label:nth-of-type(2),
+.tabComponent input:nth-of-type(3):checked ~ .tabs-lg-screen label:nth-of-type(3),
+.tabComponent input:nth-of-type(4):checked ~ .tabs-lg-screen label:nth-of-type(4) {
   border-bottom-color: #26C6DA;
   color: #26C6DA;
 }
 
-div.tabComponent input:nth-of-type(1):checked ~ .tab-content:nth-of-type(1),
-div.tabComponent input:nth-of-type(2):checked ~ .tab-content:nth-of-type(2),
-div.tabComponent input:nth-of-type(3):checked ~ .tab-content:nth-of-type(3),
-div.tabComponent input:nth-of-type(4):checked ~ .tab-content:nth-of-type(4) {
+.tabComponent input:nth-of-type(1):checked ~ .tab-content-decor,
+.tabComponent input:nth-of-type(2):checked ~ .tab-content-furniture,
+.tabComponent input:nth-of-type(3):checked ~ .tab-content-kitchen,
+.tabComponent input:nth-of-type(4):checked ~ .tab-content-clearance {
   display: block;
+}
+
+@media (max-width: 1024px) {
+  .tabComponent {
+    width: 80%;
+    max-width: 800px;
+  }
+}
+
+/* Using iPad-portrait breakpoint fits better in this case */
+@media (max-width: 768px) {
+  body {
+    font-size: 0.85em;
+  }
+
+  .tabComponent {
+    width: 100%;
+  }
+
+  .tabs-lg-screen {
+    display: none;
+  }
+
+  .tabs-sm-screen {
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    width: 100%;
+  }
+
+  .tabs-sm-screen label {
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    width: 100%;
+    color: inherit;
+  }
+
+  .tab-content {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0 20px;
+    max-height: 0;
+    overflow-y: hidden;
+
+    -webkit-transition: max-height 0.5s, padding-top 0.5s, padding-bottom 0.5s;
+    -moz-transition: max-height 0.5s, padding-top 0.5s, padding-bottom 0.5s;
+    -ms-transition: max-height 0.5s, padding-top 0.5s, padding-bottom 0.5s;
+    -o-transition: max-height 0.5s, padding-top 0.5s, padding-bottom 0.5s;
+    transition: max-height 0.5s, padding-top 0.5s, padding-bottom 0.5s;
+  }
+
+  .tabComponent input:nth-of-type(1):checked ~ .tabs-sm-screen-decor label,
+  .tabComponent input:nth-of-type(2):checked ~ .tabs-sm-screen-furniture label,
+  .tabComponent input:nth-of-type(3):checked ~ .tabs-sm-screen-kitchen label,
+  .tabComponent input:nth-of-type(4):checked ~ .tabs-sm-screen-clearance label {
+    color: #26C6DA;
+    border-bottom-color: #26C6DA;
+    -webkit-box-shadow: 0 3px 5px -1px #9E9E9E;
+    -moz-box-shadow: 0 3px 5px -1px #9E9E9E;
+    box-shadow: 0 3px 5px -1px #9E9E9E;
+  }
+
+  .tabComponent input:nth-of-type(1):checked ~ .tab-content-decor,
+  .tabComponent input:nth-of-type(2):checked ~ .tab-content-furniture,
+  .tabComponent input:nth-of-type(3):checked ~ .tab-content-kitchen,
+  .tabComponent input:nth-of-type(4):checked ~ .tab-content-clearance {
+    max-height: 200px;
+    padding: 20px;
+  }
 }
 
